# Capstone_ALB_BE_2025

./: README.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile_location.py
accounts/tests/: tests.py
harvestplace/: asgi.py  settings.py  urls.py  views.py  wsgi.py
market/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
market/fixtures/: categories.json
market/migrations/: 0001_initial.py  0001_rename_owner_to_farmer.py  0002_delete_order.py  0003_category_parent_category_slug_product_discount_price_and_more.py  0004_product_harvest_date_alter_product_slug_and_more.py  0005_alter_product_harvest_date.py  0006_alter_product_harvest_date.py
market/tests/: test_market.py  test_orders.py  test_products.py
orders/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_total_amount_alter_order_status.py
orders/tests/: test_orders.py
wallet/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
wallet/migrations/: 0001_initial.py
